removes justify-content center from home-body

--- a/source/css/source.css
+++ b/source/css/source.css
@@ -148,7 +148,7 @@ blockquote {
 .home-body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /*justify-content: center;*/
 }
 
 .home {
